# art_application

./: .gitignore  CMakeLists.txt  README.md
include/: brush.hpp  canvas.hpp  colorButton.hpp  settings.hpp  tool.hpp
src/: brush.cpp  canvas.cpp  colorButton.cpp  main.cpp
